--- a/views/one.ejs
+++ b/views/one.ejs
@@ -167,7 +167,7 @@
 <!-- FIM HTML -->
 
 <div id="posHome">
-    <h1>24/07/2022</h1>
+    <img class="logoQuando" src="/img/quando.svg">
 </div>
 
 
@@ -217,9 +217,7 @@
 
                         </p>
 
-                        <img class="imgViagem" src="/img/paris.jpeg">
-
-                        <img class="imgViagem" src="/img/luvre.jpg">
+                    
 
                         <img class="iconMsg" src="/icon/msg.png">
 
@@ -327,7 +325,7 @@
 <!--FIM TESTE-->
 
 
-
+<!--COMENTADO-->
     <body id="fundoPadrinhos">
 
         <div class="container">
@@ -505,6 +503,8 @@
 
 
     <!--FIM PADRINHOS-->
+
+    <!--FIM COMENTADO-->
 
 </section>
 <section id="convidados">
