--- a/views/partials/header3.ejs
+++ b/views/partials/header3.ejs
@@ -20,7 +20,8 @@
 
     <!-- LOGO -->
     <div>
-      <h1 class="logoPosition">F & L</h1>
+      
+      <img class="logoPosition" src="/img/monograma.svg">
     </div>
     <!-- FIM LOGO-->
 
