--- a/views/one.ejs
+++ b/views/one.ejs
@@ -541,6 +541,10 @@
 
     </div>
 
+    <div id="posHome">
+        <img class="logoQuando" src="/img/assfundono.svg">
+    </div>
+
 </section>
 <!--FIM PRESENTES-->
 
