--- a/views/one.ejs
+++ b/views/one.ejs
@@ -509,31 +509,137 @@
 </section>
 <section id="convidados">
     <!--CONTRIBUA-->
+    
+  <!-- CONTEUDO CENTRAL-->
+  <div class="centerContribua">
 
-    <h1>Confirme presença</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <h2>Confirme sua presença</h2>
+
+  <div class="painelContribua">
+
+    <form method="POST" action="/contribua">
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Nome</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome" name="nome">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Endereço de E-mail</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" name="email">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Telefone</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="(XX) XXXXX-XXXX" name="telefone">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Mensagem</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="msg"></textarea>
+      </div>
+
+      <div id="liveAlertPlaceholder"></div>
+      <input class="btn btn-primary" type="reset" value="Limpar">
+      
+      <input class="btn btn-primary" type="submit" value="Enviar" id="liveAlertBtn">
+
+    </form>
+
+  </div>
+
+  
+  <script>
+
+var alertPlaceholder = document.getElementById('liveAlertPlaceholder')
+var alertTrigger = document.getElementById('liveAlertBtn')
+
+function alert(message, type) {
+  var wrapper = document.createElement('div')
+  wrapper.innerHTML = '<div class="alert alert-' + type + ' alert-dismissible" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+
+  alertPlaceholder.append(wrapper)
+}
+
+if (alertTrigger) {
+  alertTrigger.addEventListener('click', function () {
+    alert('Sua mensagem foi enviada com sucesso', 'success')
+  })
+}
+
+  </script>
+     
+    
+    
+  </div>
+  <!-- FIM CONTEUDO CENTRAL-->
+
+
+
+
+
+
+
+
 
 </section>
 
 <!--PRESENTES-->
 <section id="presentes">
 
+
     <div class="bloco">
+    <h2>PRESENTES</h2>
 
-        <div id="bloco1">
-            Lista de presentes
 
-        </div>
+        <div class="card-group">
+            <div class="card">
+              <img src="/img/casasbahia.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Casas Bahia</h5>
+                <p class="card-text">Escolha seu presente pela Casas Bahia</p>
+                <a href="https://listas.casasbahia.com.br/lilianefernando2022" class="btn btn-primary">Ir para a Loja</a>  
+            </div>
+            </div>
 
-        <div id="bloco2">
-            Lista de presentes
+            <div class="card">
+                <img src="/img/lojasmel.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Lojas Mel</h5>
+                  <p class="card-text">Escolha seu presente pela Lojas Mel</p>
+                  <a href="https://www.lojasmel.com/lista/presente/lilian-de-siqueira-paula-e-fernando-de-lima-gomes/11225/" class="btn btn-primary">Ir para a Loja</a>  
+              </div>
+              </div>
+
+              <div class="card">
+                <img src="/img/camicado.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Camicado</h5>
+                  <p class="card-text">Escolha seu presente pela Camicado</p>
+                  <a href="https://www.camicado.com.br/lista/convidado/lilianefernando" class="btn btn-primary">Ir para a Loja</a>  
+              </div>
+              </div>
+
+              <div class="card">
+                <img src="/img/pix.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">PIX</h5>
+                  <p class="card-text">Faça um pix</p>
+                  <a href="" class="btn btn-primary">Chave</a>  
+              </div>
+              </div>
+        
             
-        </div>
+            
+          </div>
 
-        <div id="bloco3">
-            PIX
-            
-            
-        </div>
+
+
+
+
+
+
 
 
 
