--- a/views/one.ejs
+++ b/views/one.ejs
@@ -183,64 +183,48 @@
 
     <!--VIAGEM -->
 
-    <!-- BODY -->
-
-    <body id="fundoViagem">
-        <div class="container-sm">
-            <div class="row">
-
-                <div class="col">
-                    <!-- CONTEUDO CENTRAL-->
-                    <div class="mainViagem">
-
-                        <h1>Nossa Viagem</h1>
-
-                        <p class="pViagem">
+    <div class="container-sm">
 
 
-                            Paris é chamada de cidade Luz e é considerada uma das cidades mais românticas do mundo.
-                            Iremos realizar um sonho, estamos gratos pelo privilégio de passar a nossa lua de mel
-                            em um lugar tão mágico.
+        <!-- CONTEUDO CENTRAL-->
+        <div class="mainViagem">
 
-                        </p>
+            <h1>Nossa Viagem</h1>
 
-                        <p class="pViagem">
-
-
-                            Toda realização de um sonho exige sacrifícios, mas é isto que faz valer a pena.
-                            Não foi fácil para chegar até aqui, muitos vão pensar que se trata de sorte, porém
-                            nada disso seria possível sem renúncia.
-
-                            Sonhe, pois tudo é possível. Tudo que envolve empenho, dedicação e vontade tem
-                            chances de se realizar. E sonho que se sonha junto, torna-se realidade.
-                            Viajar é colecionar memórias que ficarão eternizadas no coração.
-
-                        </p>
-
-                    
-
-                        <img class="iconMsg" src="/icon/msg.png">
+            <p class="pViagem">
 
 
-                    </div>
-                    <!-- FIM CONTEUDO CENTRAL-->
-                </div>
+                Paris é chamada de cidade Luz e é considerada uma das cidades mais românticas do mundo.
+                Iremos realizar um sonho, estamos gratos pelo privilégio de passar a nossa lua de mel
+                em um lugar tão mágico.
 
-            </div>
+            </p>
+
+            <p class="pViagem">
+
+
+                Toda realização de um sonho exige sacrifícios, mas é isto que faz valer a pena.
+                Não foi fácil para chegar até aqui, muitos vão pensar que se trata de sorte, porém
+                nada disso seria possível sem renúncia.
+
+                Sonhe, pois tudo é possível. Tudo que envolve empenho, dedicação e vontade tem
+                chances de se realizar. E sonho que se sonha junto, torna-se realidade.
+                Viajar é colecionar memórias que ficarão eternizadas no coração.
+
+            </p>
+
+
+
+
+
         </div>
+        <!-- FIM CONTEUDO CENTRAL-->
+    </div>
 
 
-
-
-    </body>
-    <!-- FIM DO BODY -->
-
-    </html>
-    <!-- FIM HTML -->
 
 
     <!--FIM VIAGEM-->
-
 
 
 </section>
@@ -249,58 +233,43 @@
 
     <!--FESTA-->
 
-    <body id="fundoFesta">
-        <!-- CONTEUDO DA DIREITA -->
-        <aside class="rightSide">
 
-            <img class="iconMsg" src="/icon/msg.png">
+    <!-- CONTEUDO CENTRAL-->
+    <div class="contentFesta">
 
-        </aside>
-        <!-- FIM DO CONTEUDO DA DIREITA-->
+        <h1>SPAZIO CASANOSTRA</h1>
 
-        <!-- CONTEUDO CENTRAL-->
-        <div class="contentFesta">
+        <p>
 
-            <h1>SPAZIO CASANOSTRA</h1>
+            Estamos felizes em poder nos reunir com vocês no Spazio Casa Nostra,
+            e esperamos que todos possam comparecer e desfrutar conosco do dia mais feliz das nossas vidas.
 
-            <p>
+            Cada detalhe foi pensado para proporcionar aos nossos convidados uma experiência agradável
+            e que renda boas lembranças.
 
-                Estamos felizes em poder nos reunir com vocês no Spazio Casa Nostra,
-                e esperamos que todos possam comparecer e desfrutar conosco do dia mais feliz das nossas vidas.
+            Teremos uma cabine de fotos para que você convidado possa ter uma recordação deste dia especial.
+            Sua presença é muito importante para nós!
 
-                Cada detalhe foi pensado para proporcionar aos nossos convidados uma experiência agradável
-                e que renda boas lembranças.
+        </p>
 
-                Teremos uma cabine de fotos para que você convidado possa ter uma recordação deste dia especial.
-                Sua presença é muito importante para nós!
+        <div class="imgCenterViagem">
 
-            </p>
+            <img class="imgViagem" src="/img/mesas.webp">
 
-            <div class="imgCenterViagem">
+            <img class="imgViagem" src="/img/decora.webp">
 
-                <img class="imgViagem" src="/img/mesas.webp">
+            <img class="imgViagem" src="/img/altar.webp">
 
-                <img class="imgViagem" src="/img/decora.webp">
-
-                <img class="imgViagem" src="/img/altar.webp">
-
-                <img class="imgViagem" src="/img/balada.webp">
-
-
-            </div>
-
-            <h2>Endereço: R. Finlândia, 261 - Parque das Nações, Santo André - SP, 09280-090</h2>
+            <img class="imgViagem" src="/img/balada.webp">
 
 
         </div>
-        <!-- FIM CONTEUDO CENTRAL-->
+
+        <h2>Endereço: R. Finlândia, 261 - Parque das Nações, Santo André - SP, 09280-090</h2>
 
 
-    </body>
-    <!-- FIM DO BODY -->
-
-    </html>
-    <!-- FIM HTML -->
+    </div>
+    <!-- FIM CONTEUDO CENTRAL-->
 
 
     <!--FIM FESTA-->
@@ -318,14 +287,15 @@
 
 
 
-<!--teste-->
+    <!--teste-->
 
 
 
-<!--FIM TESTE-->
+    <!--FIM TESTE-->
 
 
-<!--COMENTADO-->
+    <!--COMENTADO-->
+
     <body id="fundoPadrinhos">
 
         <div class="container">
@@ -509,71 +479,74 @@
 </section>
 <section id="convidados">
     <!--CONTRIBUA-->
-    
-  <!-- CONTEUDO CENTRAL-->
-  <div class="centerContribua">
 
-    <br>
-    <br>
-    <br>
-    <br>
+    <!-- CONTEUDO CENTRAL-->
+    <div class="centerContribua">
 
-    <h2>Confirme sua presença</h2>
+        <br>
+        <br>
+        <br>
+        <br>
 
-  <div class="painelContribua">
+        <h2>Confirme sua presença</h2>
 
-    <form method="POST" action="/contribua">
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Nome</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome" name="nome">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Endereço de E-mail</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" name="email">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Telefone</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="(XX) XXXXX-XXXX" name="telefone">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Mensagem</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="msg"></textarea>
-      </div>
+        <div class="painelContribua">
 
-      <div id="liveAlertPlaceholder"></div>
-      <input class="btn btn-primary" type="reset" value="Limpar">
-      
-      <input class="btn btn-primary" type="submit" value="Enviar" id="liveAlertBtn">
+            <form method="POST" action="/contribua">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome"
+                        name="nome">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Endereço de E-mail</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com" name="email">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Telefone</label>
+                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="(XX) XXXXX-XXXX"
+                        name="telefone">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Mensagem</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="msg"></textarea>
+                </div>
 
-    </form>
+                <div id="liveAlertPlaceholder"></div>
+                <input class="btn btn-primary" type="reset" value="Limpar">
 
-  </div>
+                <input class="btn btn-primary" type="submit" value="Enviar" id="liveAlertBtn">
 
-  
-  <script>
+            </form>
 
-var alertPlaceholder = document.getElementById('liveAlertPlaceholder')
-var alertTrigger = document.getElementById('liveAlertBtn')
+        </div>
 
-function alert(message, type) {
-  var wrapper = document.createElement('div')
-  wrapper.innerHTML = '<div class="alert alert-' + type + ' alert-dismissible" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
 
-  alertPlaceholder.append(wrapper)
-}
+        <script>
 
-if (alertTrigger) {
-  alertTrigger.addEventListener('click', function () {
-    alert('Sua mensagem foi enviada com sucesso', 'success')
-  })
-}
+            var alertPlaceholder = document.getElementById('liveAlertPlaceholder')
+            var alertTrigger = document.getElementById('liveAlertBtn')
 
-  </script>
-     
-    
-    
-  </div>
-  <!-- FIM CONTEUDO CENTRAL-->
+            function alert(message, type) {
+                var wrapper = document.createElement('div')
+                wrapper.innerHTML = '<div class="alert alert-' + type + ' alert-dismissible" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+
+                alertPlaceholder.append(wrapper)
+            }
+
+            if (alertTrigger) {
+                alertTrigger.addEventListener('click', function () {
+                    alert('Sua mensagem foi enviada com sucesso', 'success')
+                })
+            }
+
+        </script>
+
+
+
+    </div>
+    <!-- FIM CONTEUDO CENTRAL-->
 
 
 
@@ -590,49 +563,52 @@ if (alertTrigger) {
 
 
     <div class="bloco">
-    <h2>PRESENTES</h2>
+        <h2>PRESENTES</h2>
 
 
         <div class="card-group">
             <div class="card">
-              <img src="/img/casasbahia.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Casas Bahia</h5>
-                <p class="card-text">Escolha seu presente pela Casas Bahia</p>
-                <a href="https://listas.casasbahia.com.br/lilianefernando2022" class="btn btn-primary">Ir para a Loja</a>  
-            </div>
+                <img src="/img/casasbahia.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Casas Bahia</h5>
+                    <p class="card-text">Escolha seu presente pela Casas Bahia</p>
+                    <a href="https://listas.casasbahia.com.br/lilianefernando2022" class="btn btn-primary">Ir para a
+                        Loja</a>
+                </div>
             </div>
 
             <div class="card">
                 <img src="/img/lojasmel.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Lojas Mel</h5>
-                  <p class="card-text">Escolha seu presente pela Lojas Mel</p>
-                  <a href="https://www.lojasmel.com/lista/presente/lilian-de-siqueira-paula-e-fernando-de-lima-gomes/11225/" class="btn btn-primary">Ir para a Loja</a>  
-              </div>
-              </div>
+                    <h5 class="card-title">Lojas Mel</h5>
+                    <p class="card-text">Escolha seu presente pela Lojas Mel</p>
+                    <a href="https://www.lojasmel.com/lista/presente/lilian-de-siqueira-paula-e-fernando-de-lima-gomes/11225/"
+                        class="btn btn-primary">Ir para a Loja</a>
+                </div>
+            </div>
 
-              <div class="card">
+            <div class="card">
                 <img src="/img/camicado.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Camicado</h5>
-                  <p class="card-text">Escolha seu presente pela Camicado</p>
-                  <a href="https://www.camicado.com.br/lista/convidado/lilianefernando" class="btn btn-primary">Ir para a Loja</a>  
-              </div>
-              </div>
+                    <h5 class="card-title">Camicado</h5>
+                    <p class="card-text">Escolha seu presente pela Camicado</p>
+                    <a href="https://www.camicado.com.br/lista/convidado/lilianefernando" class="btn btn-primary">Ir
+                        para a Loja</a>
+                </div>
+            </div>
 
-              <div class="card">
+            <div class="card">
                 <img src="/img/pix.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">PIX</h5>
-                  <p class="card-text">Faça um pix</p>
-                  <a href="" class="btn btn-primary">Chave</a>  
-              </div>
-              </div>
-        
-            
-            
-          </div>
+                    <h5 class="card-title">PIX</h5>
+                    <p class="card-text">Faça um pix</p>
+                    <a href="" class="btn btn-primary">Chave</a>
+                </div>
+            </div>
+
+
+
+        </div>
 
 
 
