--- a/public/css/newLook2.css
+++ b/public/css/newLook2.css
@@ -172,7 +172,19 @@ label[for="bt_menu"]{
 
 
 
-    
+    /* VIAGEM */
+
+
+    .mainViagem{
+        text-align: center;
+        margin-top: 100px;
+        background-color: rgba(0, 0, 0, 0.4);
+        float: left;
+        width: 95%;
+       
+    }
+
+
 
 
 }
@@ -255,15 +267,27 @@ label[for="bt_menu"]{
 
 /* VIAGEM */
 
+#viagem{
+
+    background-image: url(/img/viagem.svg);
+    background-repeat: no-repeat;
+    width: 100%;
+    float: left;
+    height: 650px;
+ 
+
+}
 
 .mainViagem{
     text-align: center;
     margin-top: 100px;
     background-color: rgba(0, 0, 0, 0.4);
     float: right;
-    width: 40%;
+    border-radius: 10px;
+    padding: 25px;
    
 }
+
 
 .pViagem{
 
@@ -290,12 +314,16 @@ label[for="bt_menu"]{
 
 /* FESTA */
 
-#fundoFesta{
+#festa{
     background-image: url(/img/fundo5.png);
     background-repeat: no-repeat;
     background-size: cover;
-    
+    width: 100%;
+    float: left;
+    min-height: 100vh;
+    position: relative;
 }
+
 
 .contentFesta{
     margin-top: 100px;
@@ -379,15 +407,31 @@ label[for="bt_menu"]{
 
 /* CONTRIBUA */
 
-#fundoContribua{
+
+#contribua{
     background-image: url(/img/dedo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    
+    width: 100%;
+    float: left;
+    height: 100vh;
+    position: relative;
 }
 
+#convidados{
+    background-image: url(/img/dedo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    float: left;
+    min-height: 100vh;
+    position: relative;
+}
+
+
+
 .centerContribua{
-    width: 500px;
+    width: 400px;
     text-align: center;
     float: left;
     margin-top: 10px;
@@ -416,27 +460,9 @@ label[for="bt_menu"]{
     align-content: center;
 }
 
-#viagem{
 
-    background-image: url(/img/viagem.svg);
-    background-repeat: no-repeat;
-    
-    width: 100%;
-    float: left;
-    height: 100vh;
-    position: relative;
 
-}
 
-#festa{
-    background-image: url(/img/fundo5.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    float: left;
-    height: 100vh;
-    position: relative;
-}
 
 #presentes{
     
@@ -469,27 +495,6 @@ label[for="bt_menu"]{
     height: 100vh;
     position: relative;
 }
-
-#contribua{
-    background-image: url(/img/dedo.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    float: left;
-    height: 100vh;
-    position: relative;
-}
-
-#convidados{
-    background-image: url(/img/dedo.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    float: left;
-    height: 100vh;
-    position: relative;
-}
-
 
 
 header{
