--- a/public/css/newLook2.css
+++ b/public/css/newLook2.css
@@ -126,6 +126,7 @@ label[for="bt_menu"]{
 @media(max-width: 1280px){
 
 
+
     label[for="bt_menu"]{
         display: block;
     }
@@ -431,7 +432,8 @@ label[for="bt_menu"]{
 
 
 .centerContribua{
-    width: 400px;
+    max-width: 90%;
+    min-width: 200px;
     text-align: center;
     float: left;
     margin-top: 10px;
