--- a/views/painel.ejs
+++ b/views/painel.ejs
@@ -1,46 +1,36 @@
-<!-- BARRA COMPARTILHADA -->
-<%- include('./partials/header2') %>
-<!-- FIM BARRA COMPARTILHADA -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
 
-<body id="fundoPresentes">   
-  <!-- CONTEUDO DA DIREITA -->
-  <aside class="rightSide">
 
-    <img class="iconMsg" src="/icon/msg.png">
 
-  </aside>
-   <!-- FIM DO CONTEUDO DA DIREITA-->
+<h1>
+  #####
+  <% nomes %>
+</h1>
+ 
 
-  <!-- CONTEUDO CENTRAL-->
-  <div>
 
-    <h1>Mensagens</h1>
-
-    <table class="tabela">
-   
+  <table>
       <tr>
-        <th>Data</th>
         <th>Nome</th>
-        <th>E-mail</th>   
-        <th>Telefone</th>  
-        <th>Mensagem</th>  
+        <th>E-mail</th>
+        <th>Telefone</th>
+        <th>Mensagem</th>
       </tr>
       <tr>
-        <td>Data</td>
-        <td>Nome</td>
-        <td>Email</td>
-        <td>Telefone</td>
-        <td>Mensagem</td>
-      </tr> 
-    </table>
-
-    
-  </div>
-  <!-- FIM CONTEUDO CENTRAL-->
-
-
+        <td>Fernando</td>
+        <td>fernando@windowslive.com</td>
+        <td>11 995370943</td>
+        <td>Ola mundo</td>
+      </tr>
+  </table>
+ 
 </body>
- <!-- FIM DO BODY -->
-
 </html>
-<!-- FIM HTML -->
