--- a/views/one.ejs
+++ b/views/one.ejs
@@ -563,7 +563,7 @@
 
 
     <div class="bloco">
-        <h2>PRESENTES</h2>
+        <h2>LISTA DE PRESENTES</h2>
 
 
         <div class="card-group">
