--- a/views/qrcode.ejs
+++ b/views/qrcode.ejs
@@ -17,15 +17,30 @@
     </style>
 </head>
 <body>
-
-    <h1>############## Convite para o casamento ##################</h1>
-    <h2>############## ------------------------ ##################</h2>
-    <h2>############## ------------------------ ##################</h2>
-    <h2>############## ------------------------ ##################</h2>
-    <h2>############## ------------------------ ##################</h2>
-    <h2>############## ------------------------ ##################</h2>
-    <h1>############## Convite para o casamento ##################</h1>
-    
+    <div id="tabela">
+        <table> 
+            <tr>
+                <th>Nome</th>
+                <th>Convidado</th>
+                <th>Descrição</th>
+            </tr>
+            <tr>
+                <td>kaique</td>
+                <td>Convidado</td>
+                <td>Convite</td>
+            </tr>
+            <tr>
+                <td>kaique</td>
+                <td>Convidado</td>
+                <td>Convite</td>
+            </tr>
+            <tr>
+                <td>kaique</td>
+                <td>Convidado</td>
+                <td>Convite</td>
+            </tr>
+        </table>
+    </div>
     <p>
         <input type="button" value="Criar PDF" id="btnImprimir" onclick="CriaPDF()" />
     </p>
@@ -52,4 +67,3 @@
     }
 </script>
 </html>
- 
