--- a/views/one2.ejs
+++ b/views/one2.ejs
@@ -13,12 +13,15 @@
     <header>
 
         <!-- BARRA COMPARTILHADA -->
-        <%- include('./partials/headersOne2') %>
+        
 
     </header>
 
     <!--HOME-->
     <section id="fundoIndex">
+        <!-- BARRA COMPARTILHADA -->
+        <%- include('./partials/headersOne2') %>
+        
         <div class="container-sm">
             <div class="row" id="painelInicial">
                 <div class="col" id="efundoindex">
@@ -39,9 +42,9 @@
     <!--FIM HOME-->
 
     <!--POS HOME-->
-    <section>
+    <section class="posHome">
 
-        <div class="posHome">
+        <div>
 
             <p class="frase">EMBARQUE CONOSCO RUMO</p>
             <p class="frase">AO DIA MAIS IMPORTANTE DE NOSSAS VIDAS</p>
@@ -371,9 +374,9 @@
     <!-- FIM CONTATO-->
 
     <!--POS HOME-->
-    <section>
+    <section class="posHome">
 
-        <div class="posHome">
+        <div>
 
             <p class="frase">OBRIGADO POR VER ATÉ AQUI</p>
             <p class="frase">AGUARDAMOS SUA PRESENÇA</p>
